fixed Notion API, implemented Points Insertion

--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sighmir/blowfish": "^1.0.2",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
-    "saspxthespians": "file:"
+    "saspxthespians": "file:",
+    "serve-static": "^1.16.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
