--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
     "saspxthespians": "file:",
     "serve-static": "^1.16.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -30,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "js-cookie": "^3.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
