--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.25",
     "@sighmir/blowfish": "^1.0.2",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
@@ -19,6 +20,7 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
+    "resend": "^4.0.0",
     "saspxthespians": "file:",
     "serve-static": "^1.16.2"
   },
